# web3-attack-simulation

./: .gitignore  .gitmodules  foundry.toml  pyproject.toml
.github/: README.md  TODO.md
report/sources/: context.tex  main.tex  template
report/sources/references/: urls.tex
samples/0x0dex/tests/: exploit.reversed.sol
samples/0x0dex/transactions/: 18115708.0x00b375f8e90fc54c1345b33c686977ebec26877e2c8cac165429927a6c9bdbec.json
samples/astrid/transactions/: 18448168.0x8af9b5fb3e2e3df8659ffb2e0f0c1f4c90d5a80f4f6fccef143b823ce673fb60.json
samples/balancer-distribution/transactions/: 18286885.0xc89adad6860d5fdb58b357432e3b113e2ecf2c50f53ae18edcc70d3c7119e525.json
samples/coinex/transactions/: 18120510.0xb6a07c2c591e43abc63add833aaf4d6ab47e66f05cf6b49a9dda7c2317b2d61c.json
samples/dapp-social/: main.abi.heimdall.json
samples/dapp-social/contracts/: helper.abi.heimdall.json  helper.creation.dedaub.sol  helper.reversed.sol  helper.runtime.dedaub.sol  helper.runtime.heimdall.sol  main.runtime.dedaub.sol  main.runtime.heimdall.sol
samples/dapp-social/tests/: guess.signature.sol  reversed.sol
samples/dapp-social/transactions/: 18048974.0x1f6b9ccdf21dd0247d6acc4ae4eb370558ecb8b782fa51a76c5112f62b7dcda0.json  (+3 more)
samples/floor-dao/contracts/: main.abi.heimdall.sol  (+2 more)
samples/poisoning/: README.md
scripts/: avax.txt  bsc.txt  eth.txt  inputs.py  scrape.py  scrape.sh  tx.sh
scripts/rekt/: arbitrum.txt  eth.txt
scripts/wordlists/: inputs.address.txt  inputs.bytes.large.txt
sources/: main.tex
sources/figures/: main.tex
sources/references/: urls.tex
(+52 files in other folders)
